feat: Diganosis 컴포넌트 생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AtchI-AOS</string>
+    <string name="title_activity_mmse_view">MmseView</string>
 </resources>
